unpackaged/main/default/objects/zkmulti__MCShipment__c/zkmulti__MCShipment__c.object-meta.xml
<CustomObject>
    <label>Shipment</label>
    <nameField>
        <displayFormat>Shipment-{00000000}</displayFormat>
        <label>Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>