unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/Related_Case_Brand__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Brand__c</fullName>
    <formula>Case__r.Brand_Lookup_Search__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Case Brand</label>
    <type>Text</type>
</CustomField>