unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/Related_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Number__c</fullName>
    <formula>Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Case Number</label>
    <type>Text</type>
</CustomField>