unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Actual_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Actual_Delivery_Date__c</fullName>
    <label>Actual Delivery Date</label>
    <type>Date</type>
</CustomField>