unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Bulk_Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Bulk_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Shipment</label>
    <referenceTo>zkmulti__MCBulk_Shipment__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>