unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__DeliveryInstructions__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__DeliveryInstructions__c</fullName>
    <label>Delivery Instructions</label>
    <type>TextArea</type>
</CustomField>