unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Dimension_Units__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Dimension_Units__c</fullName>
    <label>Dimension Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>