unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__EMailNotifyOnExceptionAlso__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__EMailNotifyOnExceptionAlso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notify on Exception</label>
    <type>Checkbox</type>
</CustomField>