unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Pickup__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Pickup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Multi Carrier Pickup</label>
    <referenceTo>zkmulti__MCPickup__c</referenceTo>
    <relationshipName>Multi_Carrier_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>