unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Recipient_Account__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>