unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Recipient_Address_is_Residential__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Address_is_Residential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recipient Address is Residential</label>
    <type>Checkbox</type>
</CustomField>