unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Return_Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Return_Shipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Shipment</label>
    <type>Checkbox</type>
</CustomField>