unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Shipmate_Preference__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipmate_Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipmate Preference</label>
    <referenceTo>zkmulti__MCShipmate_Preference__c</referenceTo>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>