unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Shipment_Info__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipment_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Info</label>
    <referenceTo>zkmulti__MCShipmentInfo__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>