unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Shipment_Processing_Completed__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Shipment_Processing_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipment Processing Completed</label>
    <type>Checkbox</type>
</CustomField>