unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__TotalSurchargeDescriptions__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__TotalSurchargeDescriptions__c</fullName>
    <label>Total Surcharge Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>