unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__TotalSurcharges__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__TotalSurcharges__c</fullName>
    <label>Total Surcharges</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>