unpackaged/main/default/objects/zkmulti__MCShipment__c/fields/zkmulti__Tracker_Id__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Tracker_Id__c</fullName>
    <label>Tracker Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>