unpackaged/main/default/objects/zkmulti__MCShipment__c/listViews/zkmulti__All.listView-meta.xml
<ListView>
    <fullName>zkmulti__All</fullName>
    <columns>NAME</columns>
    <columns>zkmulti__Tracking_Number__c</columns>
    <columns>zkmulti__Carrier__c</columns>
    <columns>zkmulti__Delivered__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>zkmulti__Ship_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>